--- a/vc/package.json
+++ b/vc/package.json
@@ -14,6 +14,8 @@
     "date-holidays": "^3.23.12",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
